{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 65,
  "lineage": "fe694352-161f-5a04-a6ee-dcb31c7f38c2",
  "resources": [
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/backendAddressPools/app-gateway-personal-blog-beap",
                "ip_addresses": [],
                "name": "app-gateway-personal-blog-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/backendHttpSettingsCollection/app-gateway-personal-blog-be-htst",
                "name": "app-gateway-personal-blog-be-htst",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/frontendIPConfigurations/app-gateway-personal-blog-feip",
                "name": "app-gateway-personal-blog-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/publicIPAddresses/pub-ip-personal-blog",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/frontendPorts/app-gateway-personal-blog-feport",
                "name": "app-gateway-personal-blog-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/virtualNetworks/vnet-personal-blog/subnets/personal-blog-appgateway"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/frontendIPConfigurations/app-gateway-personal-blog-feip",
                "frontend_ip_configuration_name": "app-gateway-personal-blog-feip",
                "frontend_port_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/frontendPorts/app-gateway-personal-blog-feport",
                "frontend_port_name": "app-gateway-personal-blog-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/httpListeners/app-gateway-personal-blog-httplstn",
                "name": "app-gateway-personal-blog-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog",
            "identity": [],
            "location": "northeurope",
            "name": "app-gateway-personal-blog",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/backendAddressPools/app-gateway-personal-blog-beap",
                "backend_address_pool_name": "app-gateway-personal-blog-beap",
                "backend_http_settings_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/backendHttpSettingsCollection/app-gateway-personal-blog-be-htst",
                "backend_http_settings_name": "app-gateway-personal-blog-be-htst",
                "http_listener_id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/httpListeners/app-gateway-personal-blog-httplstn",
                "http_listener_name": "app-gateway-personal-blog-httplstn",
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/applicationGateways/app-gateway-personal-blog/requestRoutingRules/app-gateway-personal-blog-rqrt",
                "name": "app-gateway-personal-blog-rqrt",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "RG-Personal-Blog",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_gateway.azurerm_public_ip.public_ip",
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_network_security_group.network_security_group",
            "module.vnet.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/publicIPAddresses/pub-ip-personal-blog",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.138.142.117",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "pub-ip-personal-blog",
            "resource_group_name": "RG-Personal-Blog",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/networkSecurityGroups/nsg-personal-blog",
            "location": "northeurope",
            "name": "nsg-personal-blog",
            "resource_group_name": "RG-Personal-Blog",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyToAny",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Port_100",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "70d17402-6abb-48ac-bfe3-450472087ea1",
            "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/virtualNetworks/vnet-personal-blog",
            "location": "northeurope",
            "name": "vnet-personal-blog",
            "resource_group_name": "RG-Personal-Blog",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/virtualNetworks/vnet-personal-blog/subnets/personal-blog-k8s",
                "name": "personal-blog-k8s",
                "security_group": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/networkSecurityGroups/nsg-personal-blog"
              },
              {
                "address_prefix": "10.10.2.0/24",
                "id": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/virtualNetworks/vnet-personal-blog/subnets/personal-blog-appgateway",
                "name": "personal-blog-appgateway",
                "security_group": "/subscriptions/7d62b4e4-e187-41ba-a266-036a7164f434/resourceGroups/RG-Personal-Blog/providers/Microsoft.Network/networkSecurityGroups/nsg-personal-blog"
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.resource_group",
            "module.vnet.azurerm_network_security_group.network_security_group"
          ]
        }
      ]
    }
  ]
}